--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   },
   "dependencies": {
     "flowbite": "^2.5.1"
+  },
+  "scripts": {
+    "purga": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
+    
   }
 }
