--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
-    "flowbite": "^2.5.1"
+    "flowbite": "^2.5.1",
+    "jspdf": "^2.5.2"
   },
   "scripts": {
     "purga": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
