--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "flowbite": "^2.5.2",
+    "flowbite-datepicker": "^1.3.0",
     "jspdf": "^2.5.2"
   },
   "scripts": {
